Kolokvijum1[Priprema]/Conditional (ternary) operator/semantic/semantic.output
Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function
    3              | function_list function

    4 $@1: %empty

    5 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN body

    6 parameter: %empty
    7          | _TYPE _ID

    8 body: _LBRACKET variable_list statement_list _RBRACKET

    9 variable_list: %empty
   10              | variable_list variable

   11 variable: _TYPE _ID _SEMICOLON

   12 statement_list: %empty
   13               | statement_list statement

   14 statement: compound_statement
   15          | assignment_statement
   16          | if_statement
   17          | return_statement
   18          | ternary_statement

   19 compound_statement: _LBRACKET statement_list _RBRACKET

   20 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   21 num_exp: exp
   22        | num_exp _AROP exp

   23 exp: literal
   24    | _ID
   25    | function_call
   26    | _LPAREN num_exp _RPAREN

   27 literal: _INT_NUMBER
   28        | _UINT_NUMBER

   29 $@2: %empty

   30 function_call: _ID $@2 _LPAREN argument _RPAREN

   31 argument: %empty
   32         | num_exp

   33 if_statement: if_part
   34             | if_part _ELSE statement

   35 if_part: _IF _LPAREN rel_exp _RPAREN statement

   36 ternary_statement: rel_exp _QMARK value _COLUMN value

   37 value: variable
   38      | literal

   39 rel_exp: num_exp _RELOP num_exp

   40 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 5 7 11
_IF (259) 35
_ELSE (260) 34
_RETURN (261) 40
_QMARK (262) 36
_COLUMN (263) 36
_ID (264) 5 7 11 20 24 30
_INT_NUMBER (265) 27
_UINT_NUMBER (266) 28
_LPAREN (267) 5 26 30 35
_RPAREN (268) 5 26 30 35
_LBRACKET (269) 8 19
_RBRACKET (270) 8 19
_ASSIGN (271) 20
_SEMICOLON (272) 11 20 40
_AROP (273) 22
_RELOP (274) 39
ONLY_IF (275)


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
program (22)
    on left: 1, on right: 0
function_list (23)
    on left: 2 3, on right: 1 3
function (24)
    on left: 5, on right: 2 3
$@1 (25)
    on left: 4, on right: 5
parameter (26)
    on left: 6 7, on right: 5
body (27)
    on left: 8, on right: 5
variable_list (28)
    on left: 9 10, on right: 8 10
variable (29)
    on left: 11, on right: 10 37
statement_list (30)
    on left: 12 13, on right: 8 13 19
statement (31)
    on left: 14 15 16 17 18, on right: 13 34 35
compound_statement (32)
    on left: 19, on right: 14
assignment_statement (33)
    on left: 20, on right: 15
num_exp (34)
    on left: 21 22, on right: 20 22 26 32 39 40
exp (35)
    on left: 23 24 25 26, on right: 21 22
literal (36)
    on left: 27 28, on right: 23 38
function_call (37)
    on left: 30, on right: 25
$@2 (38)
    on left: 29, on right: 30
argument (39)
    on left: 31 32, on right: 30
if_statement (40)
    on left: 33 34, on right: 16
if_part (41)
    on left: 35, on right: 33 34
ternary_statement (42)
    on left: 36, on right: 18
value (43)
    on left: 37 38, on right: 36
rel_exp (44)
    on left: 39, on right: 35 36
return_statement (45)
    on left: 40, on right: 17


State 0

    0 $accept: . program $end

    _TYPE  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    function       go to state 4


State 1

    5 function: _TYPE . _ID $@1 _LPAREN parameter _RPAREN body

    _ID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: function_list .
    3 function_list: function_list . function

    _TYPE  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7


State 4

    2 function_list: function .

    $default  reduce using rule 2 (function_list)


State 5

    5 function: _TYPE _ID . $@1 _LPAREN parameter _RPAREN body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


State 8

    5 function: _TYPE _ID $@1 . _LPAREN parameter _RPAREN body

    _LPAREN  shift, and go to state 9


State 9

    5 function: _TYPE _ID $@1 _LPAREN . parameter _RPAREN body

    _TYPE  shift, and go to state 10

    $default  reduce using rule 6 (parameter)

    parameter  go to state 11


State 10

    7 parameter: _TYPE . _ID

    _ID  shift, and go to state 12


State 11

    5 function: _TYPE _ID $@1 _LPAREN parameter . _RPAREN body

    _RPAREN  shift, and go to state 13


State 12

    7 parameter: _TYPE _ID .

    $default  reduce using rule 7 (parameter)


State 13

    5 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN . body

    _LBRACKET  shift, and go to state 14

    body  go to state 15


State 14

    8 body: _LBRACKET . variable_list statement_list _RBRACKET

    $default  reduce using rule 9 (variable_list)

    variable_list  go to state 16


State 15

    5 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN body .

    $default  reduce using rule 5 (function)


State 16

    8 body: _LBRACKET variable_list . statement_list _RBRACKET
   10 variable_list: variable_list . variable

    _TYPE  shift, and go to state 17

    $default  reduce using rule 12 (statement_list)

    variable        go to state 18
    statement_list  go to state 19


State 17

   11 variable: _TYPE . _ID _SEMICOLON

    _ID  shift, and go to state 20


State 18

   10 variable_list: variable_list variable .

    $default  reduce using rule 10 (variable_list)


State 19

    8 body: _LBRACKET variable_list statement_list . _RBRACKET
   13 statement_list: statement_list . statement

    _IF           shift, and go to state 21
    _RETURN       shift, and go to state 22
    _ID           shift, and go to state 23
    _INT_NUMBER   shift, and go to state 24
    _UINT_NUMBER  shift, and go to state 25
    _LPAREN       shift, and go to state 26
    _LBRACKET     shift, and go to state 27
    _RBRACKET     shift, and go to state 28

    statement             go to state 29
    compound_statement    go to state 30
    assignment_statement  go to state 31
    num_exp               go to state 32
    exp                   go to state 33
    literal               go to state 34
    function_call         go to state 35
    if_statement          go to state 36
    if_part               go to state 37
    ternary_statement     go to state 38
    rel_exp               go to state 39
    return_statement      go to state 40


State 20

   11 variable: _TYPE _ID . _SEMICOLON

    _SEMICOLON  shift, and go to state 41


State 21

   35 if_part: _IF . _LPAREN rel_exp _RPAREN statement

    _LPAREN  shift, and go to state 42


State 22

   40 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 43
    _INT_NUMBER   shift, and go to state 24
    _UINT_NUMBER  shift, and go to state 25
    _LPAREN       shift, and go to state 26

    num_exp        go to state 44
    exp            go to state 33
    literal        go to state 34
    function_call  go to state 35


State 23

   20 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON
   24 exp: _ID .
   30 function_call: _ID . $@2 _LPAREN argument _RPAREN

    _ASSIGN  shift, and go to state 45

    _LPAREN   reduce using rule 29 ($@2)
    $default  reduce using rule 24 (exp)

    $@2  go to state 46


State 24

   27 literal: _INT_NUMBER .

    $default  reduce using rule 27 (literal)


State 25

   28 literal: _UINT_NUMBER .

    $default  reduce using rule 28 (literal)


State 26

   26 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 43
    _INT_NUMBER   shift, and go to state 24
    _UINT_NUMBER  shift, and go to state 25
    _LPAREN       shift, and go to state 26

    num_exp        go to state 47
    exp            go to state 33
    literal        go to state 34
    function_call  go to state 35


State 27

   19 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 12 (statement_list)

    statement_list  go to state 48


State 28

    8 body: _LBRACKET variable_list statement_list _RBRACKET .

    $default  reduce using rule 8 (body)


State 29

   13 statement_list: statement_list statement .

    $default  reduce using rule 13 (statement_list)


State 30

   14 statement: compound_statement .

    $default  reduce using rule 14 (statement)


State 31

   15 statement: assignment_statement .

    $default  reduce using rule 15 (statement)


State 32

   22 num_exp: num_exp . _AROP exp
   39 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 49
    _RELOP  shift, and go to state 50


State 33

   21 num_exp: exp .

    $default  reduce using rule 21 (num_exp)


State 34

   23 exp: literal .

    $default  reduce using rule 23 (exp)


State 35

   25 exp: function_call .

    $default  reduce using rule 25 (exp)


State 36

   16 statement: if_statement .

    $default  reduce using rule 16 (statement)


State 37

   33 if_statement: if_part .
   34             | if_part . _ELSE statement

    _ELSE  shift, and go to state 51

    $default  reduce using rule 33 (if_statement)


State 38

   18 statement: ternary_statement .

    $default  reduce using rule 18 (statement)


State 39

   36 ternary_statement: rel_exp . _QMARK value _COLUMN value

    _QMARK  shift, and go to state 52


State 40

   17 statement: return_statement .

    $default  reduce using rule 17 (statement)


State 41

   11 variable: _TYPE _ID _SEMICOLON .

    $default  reduce using rule 11 (variable)


State 42

   35 if_part: _IF _LPAREN . rel_exp _RPAREN statement

    _ID           shift, and go to state 43
    _INT_NUMBER   shift, and go to state 24
    _UINT_NUMBER  shift, and go to state 25
    _LPAREN       shift, and go to state 26

    num_exp        go to state 32
    exp            go to state 33
    literal        go to state 34
    function_call  go to state 35
    rel_exp        go to state 53


State 43

   24 exp: _ID .
   30 function_call: _ID . $@2 _LPAREN argument _RPAREN

    _LPAREN   reduce using rule 29 ($@2)
    $default  reduce using rule 24 (exp)

    $@2  go to state 46


State 44

   22 num_exp: num_exp . _AROP exp
   40 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 54
    _AROP       shift, and go to state 49


State 45

   20 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 43
    _INT_NUMBER   shift, and go to state 24
    _UINT_NUMBER  shift, and go to state 25
    _LPAREN       shift, and go to state 26

    num_exp        go to state 55
    exp            go to state 33
    literal        go to state 34
    function_call  go to state 35


State 46

   30 function_call: _ID $@2 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 56


State 47

   22 num_exp: num_exp . _AROP exp
   26 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 57
    _AROP    shift, and go to state 49


State 48

   13 statement_list: statement_list . statement
   19 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF           shift, and go to state 21
    _RETURN       shift, and go to state 22
    _ID           shift, and go to state 23
    _INT_NUMBER   shift, and go to state 24
    _UINT_NUMBER  shift, and go to state 25
    _LPAREN       shift, and go to state 26
    _LBRACKET     shift, and go to state 27
    _RBRACKET     shift, and go to state 58

    statement             go to state 29
    compound_statement    go to state 30
    assignment_statement  go to state 31
    num_exp               go to state 32
    exp                   go to state 33
    literal               go to state 34
    function_call         go to state 35
    if_statement          go to state 36
    if_part               go to state 37
    ternary_statement     go to state 38
    rel_exp               go to state 39
    return_statement      go to state 40


State 49

   22 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 43
    _INT_NUMBER   shift, and go to state 24
    _UINT_NUMBER  shift, and go to state 25
    _LPAREN       shift, and go to state 26

    exp            go to state 59
    literal        go to state 34
    function_call  go to state 35


State 50

   39 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 43
    _INT_NUMBER   shift, and go to state 24
    _UINT_NUMBER  shift, and go to state 25
    _LPAREN       shift, and go to state 26

    num_exp        go to state 60
    exp            go to state 33
    literal        go to state 34
    function_call  go to state 35


State 51

   34 if_statement: if_part _ELSE . statement

    _IF           shift, and go to state 21
    _RETURN       shift, and go to state 22
    _ID           shift, and go to state 23
    _INT_NUMBER   shift, and go to state 24
    _UINT_NUMBER  shift, and go to state 25
    _LPAREN       shift, and go to state 26
    _LBRACKET     shift, and go to state 27

    statement             go to state 61
    compound_statement    go to state 30
    assignment_statement  go to state 31
    num_exp               go to state 32
    exp                   go to state 33
    literal               go to state 34
    function_call         go to state 35
    if_statement          go to state 36
    if_part               go to state 37
    ternary_statement     go to state 38
    rel_exp               go to state 39
    return_statement      go to state 40


State 52

   36 ternary_statement: rel_exp _QMARK . value _COLUMN value

    _TYPE         shift, and go to state 17
    _INT_NUMBER   shift, and go to state 24
    _UINT_NUMBER  shift, and go to state 25

    variable  go to state 62
    literal   go to state 63
    value     go to state 64


State 53

   35 if_part: _IF _LPAREN rel_exp . _RPAREN statement

    _RPAREN  shift, and go to state 65


State 54

   40 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 40 (return_statement)


State 55

   20 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   22 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 66
    _AROP       shift, and go to state 49


State 56

   30 function_call: _ID $@2 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 43
    _INT_NUMBER   shift, and go to state 24
    _UINT_NUMBER  shift, and go to state 25
    _LPAREN       shift, and go to state 26

    $default  reduce using rule 31 (argument)

    num_exp        go to state 67
    exp            go to state 33
    literal        go to state 34
    function_call  go to state 35
    argument       go to state 68


State 57

   26 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 26 (exp)


State 58

   19 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 19 (compound_statement)


State 59

   22 num_exp: num_exp _AROP exp .

    $default  reduce using rule 22 (num_exp)


State 60

   22 num_exp: num_exp . _AROP exp
   39 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 49

    $default  reduce using rule 39 (rel_exp)


State 61

   34 if_statement: if_part _ELSE statement .

    $default  reduce using rule 34 (if_statement)


State 62

   37 value: variable .

    $default  reduce using rule 37 (value)


State 63

   38 value: literal .

    $default  reduce using rule 38 (value)


State 64

   36 ternary_statement: rel_exp _QMARK value . _COLUMN value

    _COLUMN  shift, and go to state 69


State 65

   35 if_part: _IF _LPAREN rel_exp _RPAREN . statement

    _IF           shift, and go to state 21
    _RETURN       shift, and go to state 22
    _ID           shift, and go to state 23
    _INT_NUMBER   shift, and go to state 24
    _UINT_NUMBER  shift, and go to state 25
    _LPAREN       shift, and go to state 26
    _LBRACKET     shift, and go to state 27

    statement             go to state 70
    compound_statement    go to state 30
    assignment_statement  go to state 31
    num_exp               go to state 32
    exp                   go to state 33
    literal               go to state 34
    function_call         go to state 35
    if_statement          go to state 36
    if_part               go to state 37
    ternary_statement     go to state 38
    rel_exp               go to state 39
    return_statement      go to state 40


State 66

   20 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 20 (assignment_statement)


State 67

   22 num_exp: num_exp . _AROP exp
   32 argument: num_exp .

    _AROP  shift, and go to state 49

    $default  reduce using rule 32 (argument)


State 68

   30 function_call: _ID $@2 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 71


State 69

   36 ternary_statement: rel_exp _QMARK value _COLUMN . value

    _TYPE         shift, and go to state 17
    _INT_NUMBER   shift, and go to state 24
    _UINT_NUMBER  shift, and go to state 25

    variable  go to state 62
    literal   go to state 63
    value     go to state 72


State 70

   35 if_part: _IF _LPAREN rel_exp _RPAREN statement .

    $default  reduce using rule 35 (if_part)


State 71

   30 function_call: _ID $@2 _LPAREN argument _RPAREN .

    $default  reduce using rule 30 (function_call)


State 72

   36 ternary_statement: rel_exp _QMARK value _COLUMN value .

    $default  reduce using rule 36 (ternary_statement)
